# OpenGLFun

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: HunterGate.cmake
shaders/: generic.frag  generic.vert
src/: glCamera.hpp  glErrors.hpp  glShaderUtil.cpp  glShaderUtil.hpp  main.cpp
